[package]
name = "bevy_mod_debugdump"
version = "0.12.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = ["bevy/bevy_render"]

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = ["bevy_color"]

[dependencies]
pretty-type-name = "1.0"
petgraph = "0.6"
lexopt = "0.3.0"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = true }

[[example]]
name = "generate_docs"
required-features = ["render_graph"]

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]

# [patch.crates-io]
# bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
# bevy_app = { path = "../bevy/crates/bevy_app" }
# bevy_utils = { path = "../bevy/crates/bevy_utils" }
# bevy_render = { path = "../bevy/crates/bevy_render" }
# bevy = { path = "../bevy" }
